Fix blog dropdown hidden behind hero: raise header_section z-index to 9999

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3331,7 +3331,7 @@ p {
   top: 0px;
   left: 0px;
   right: 0px;
-  z-index: 99;
+  z-index: 9999;
   position: relative;
   background-color: #ffffff;
   max-width: 100%;
